--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -10,10 +10,11 @@
     
     <androidx.cardview.widget.CardView
         android:layout_width="100dp"
-        android:layout_height="130dp"
+        android:layout_height="100dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
         android:layout_margin="20dp"
+        android:layout_gravity="center"
         >
 
         <ImageView
@@ -26,19 +27,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingVertical="10dp"
         >
 
         <TextView
             android:id="@+id/news_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLines="3"
             android:text="news title"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@android:color/holo_red_dark"
-            android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             />
 
@@ -46,6 +48,7 @@
             android:id="@+id/news_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLines="4"
             android:text="news desc"
             android:textSize="14sp"
             android:textStyle="bold"
