--- a/app/src/main/res/menu/country_menu.xml
+++ b/app/src/main/res/menu/country_menu.xml
@@ -11,7 +11,7 @@
         />
 
     <item
-        android:id="@+id/ksa"
-        android:title="Saudi Arabia"
+        android:id="@+id/france"
+        android:title="France"
         />
 </menu>
